app-a/ch18/multiple-paths/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: webapp
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: ClusterIP
